[package]
name = "surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = {version = "1.0.0-beta.9", features = ["kv-mem"]}

tokio = { version = "1", features = ["full"] }
anyhow = "1"